# student_management

./: README.md  license.txt  pyproject.toml  setup.py
student_management/: api.py  hooks.py
student_management/fixtures/: role.json  workflow.json  workflow_state.json
student_management/student_management/dashboard_chart/enrollment_by_status/: enrollment_by_status.json
student_management/student_management/doctype/student_enrollment/: student_enrollment.js  student_enrollment.json  student_enrollment.py  test_student_enrollment.py
student_management/student_management/notification/student_enrollment_approved/: student_enrollment_approved.html  student_enrollment_approved.json
student_management/student_management/number_card/number_of_approved_enrollments/: number_of_approved_enrollments.json
student_management/student_management/number_card/number_of_enrollments_pending_approval/: number_of_enrollments_pending_approval.json
student_management/student_management/number_card/total_enrollments/: total_enrollments.json
student_management/student_management/report/student_enrollment_report/: student_enrollment_report.js  student_enrollment_report.json  student_enrollment_report.py
student_management/student_management/student_management_dashboard/student_enrollment_dashboard/: student_enrollment_dashboard.json
